# scoreportal

./: .env  .gitignore  README.md  integral  normal  pyproject.toml
backend/: parser.py
classes/: chord.py  measure.py
docs/: Prezentare Etapa 1.pptx  Prezentare Etapa 2.pptx  Prezentare Etapa 3.pptx
model/: loader.py  measure_sim_processing.py  model.py  model_trainer.py  parsingttl.py  trainer_v2.py
model/classes/: chord.py  measure.py
onto/: encoder.py  extractor.py  musiconto.py  ontology.py
onto/files/: 02-pallavicino--deh_dolce_anima_mia----0-score.mxl  03-marenzio--prima_parte--seconda_parte--comb--0-score.mxl  04-pallavicino--amor_i_parto----0-score.mxl  06-marenzio--provate_la_mia_fiamma----0-score.mxl  08-marenzio--laura_chel_verde_lauro----0-score.mxl  10-marenzio--il_vago_e_bello_armillo-transposed_a_4th---0-score.mxl  10-marenzio--pur_venisti_cor_mio----0-score.mxl  11-marenzio--quandio_miro_le_rose----0-score.mxl  12-marenzio--deh_tirsi_mio_gentil----0-score.mxl  14-marenzio--dono_cinzia_a_damone----0-score.mxl  14-marenzio--vivo_in_guerra_mendico----0-score.mxl  16-marenzio--occhi_lucenti_e_belli----0-score.mxl  17-marenzio--questa_ordi_il_laccio----0-score.mxl  18-marenzio--vaneggio_od_e_pur_vero----0-score.mxl  19-marenzio--o_che_soave_e_non_inteso_baccio----0-score.mxl  21-marenzio--la_bella_man_vi_stringo----0-score.mxl  Agostini-Da_queste_luci.mxl  Agostini-Dolci_labbia_soavi.mxl  Agostini-La_pace,_Amor.mxl  Agostini-Ogni_mia_gioia_fu_conversa_in_pianto.mxl  Agostini-Ond'è'l_lume_gentil.mxl  Agostini-Se_tu_non_godi,_amore.mxl  (+10 more)
(+123 files in other folders)
