[tool.poetry]
name = "scoreportal"
version = "0.1.0"
description = ""
authors = ["andreishr <andreighiteanu1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
music21 = "^9.1.0"
python-dotenv = {url = "https://files.pythonhosted.org/packages/44/2f/62ea1c8b593f4e093cc1a7768f0d46112107e790c3e478532329e434f00b/python_dotenv-1.0.0-py3-none-any.whl"}
rdflib = "^7.0.0"
termcolor = "^2.3.0"
nest-asyncio = "^1.5.8"
gensim = "^4.3.2"
aiohttp = "^3.8.5"
tqdm = "^4.66.1"
torch-geometric = "^2.3.1"
node2vec = "^0.4.6"
networkx = "2.8.8"
pyg-library = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
